--- a/package.json
+++ b/package.json
@@ -44,5 +44,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://jaewoogwak.github.io/calendar/"
+  "homepage": "https://jaewoogwak.github.io/"
 }
